[package]
name = "ddnsclient"
version = "0.1.0"
authors = ["Alin Cota"]
edition = "2018"
publish = false
readme = "README.md"
repository = "https://github.com/alincota/ddnsclient"
license-file = "LICENSE"

[dependencies]
exitcode = "1.1.2"
clap = "~2.33.0"
log = "~0.4.0"
simple_logger = "~1.6.0"
reqwest = { version = "~0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
